~fix issue where item text was unreadable

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -271,6 +271,8 @@ input[type="search"] {
     position: relative;
     z-index: 0;
     justify-content: space-between;
+
+    color: var(--text-color);
 }
 
 .item > * {
